Bunch of fixes. Now creates and disassembles functions and thunks.